Improved segmented controller to fit text and improved localization

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -73,7 +73,7 @@
 "Find Essential Oil" = "Find Essential Oil";
 
 /* No comment provided by engineer. */
-"Find oil" = "Find oil";
+"Find Oil" = "Find Oil";
 
 /* No comment provided by engineer. */
 "from %@" = "from %@";
