Updates for iOS 16 - Bottom sheets

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -407,16 +407,16 @@
 "Marjoram (Sweet)" =   "Marjoram (Sweet)";
 "Melissa" =   "Melissa";
 "Neroli" =   "Neroli";
-"Orange" =   "Orange Essential Oil";
-"Palmarosa" =   "Palmarosa Essential Oil";
-"Patchouli" =   "Patchouli Essential Oil ";
-"Pepper Black" =  "Pepper Black Essential Oil";
-"Peppermint" =   "Peppermint Essential Oil";
-"Peru Balsam" =   "Peru Balsam Essential Oil";
-"Petitgrain" =   "Petitgrain Essential Oil";
-"Pine Scotch" =   "Pine Scotch Essential Oil";
-"Pure Coffee" =   "Pure Coffee Essential Oil";
-"Rose Absolute" =   "Rose Essential Oil Absolute";
+"Orange" =   "Orange";
+"Palmarosa" =   "Palmarosa";
+"Patchouli" =   "Patchouli";
+"Pepper Black" =  "Pepper Black";
+"Peppermint" =   "Peppermint";
+"Peru Balsam" =   "Peru Balsam";
+"Petitgrain" =   "Petitgrain";
+"Pine Scotch" =   "Pine Scotch";
+"Pure Coffee" =   "Pure Coffee";
+"Rose Absolute" =   "Rose Absolute";
 "Rosemary" =   "Rosemary";
 "Sandalwood" =   "Sandalwood";
 "Siberian (needle) fir" =   "Siberian (needle) fir";
